# MapplePy

./: .gitignore  README.md  README.rst  pyproject.toml  setup.py  tox.ini
mapplings/: __init__.py  cleaner.py  cleaning_keys.py  factor,py  factor.py  mapped_tiling.py  parameter.py  parameter_list.py  row_col_map.py  tracked_tilescope.py
mapplings/algorithms/: __init__.py  factor.py  generate_gridded_perms.py  param_redundancy.py  parmeter_placement.py  point_placement.py  row_col_sep_mt.py
mapplings/cleaners/: __init__.py  cleaner.py  mappling_cleaner.py  parameter_cleaner.py  unbalanced_fusion.py  unplacement.py
mapplings/strategies/: __init__.py  factor.py  mapped_tilescope.py  row_col_sep_mt.py  tilescope_strategies.py  verification_strategy.py
old/: motzkin_paths.py  testing_factoring.py  testing_param_placement.py  testing_row_col_seperation.py
old/mapplings/: MT_factors.py  MT_point_placement.py  MT_strategy_packs.py  __init__.py  mapped_tiling.py
playground/: 10point1.py  L_classes.py  all_vincular_pairs.py  av123-interleaving.py  cleaner_motzkin.py  fig3_grid_classes.py  fixing_tests.py  hare_2_stack_sortable.py  inc_inc.json  inc_inc.py  inc_inc_expanded.json  motzkin.py  param_placement_play.py  point_placement.py  repr.py  row_col_sep.py  rowcol_sep.py  surjective_row_col_map.py  table 1.py  table1.py
src/: av123_spec.py  motzkin_paths.py  setup.py  testing_comparison.py  testing_factoring.py  testing_param_placement.py  testing_row_col_seperation.py  testing_strategy_pack.py
tests/: test_fixed_rules.py  test_json.py  test_motzkin.py
(+123 files in other folders)
